tests/expected_output/error_after_warning/000000-clang-14.0-x86_64-pc-linux-gnu.txt
tests/run_time_errors/error_after_warning.c:4:10: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
  if  (a = b) {
       ~~^~~
tests/run_time_errors/error_after_warning.c:4:10: note: place parentheses around the assignment to silence this warning
  if  (a = b) {
         ^
       (    )
tests/run_time_errors/error_after_warning.c:4:10: note: use '==' to turn this assignment into an equality comparison
  if  (a = b) {
         ^
         ==[0m
dcc explanation: you use '=' to assign to a variable, you use '==' to compare values.
tests/run_time_errors/error_after_warning.c:8:7: error: use of undeclared identifier 'c'
  a = c;
      ^
mkdir: cannot create directory ‘/.cache’: Permission denied
